# Quant-Dashboard

./: .gitignore  CMakeLists.txt  CMakePresets.json  QuantLib_Qt_Setup_Guide.md  README.md  app.rc  deploy.bat  main.cpp  resources.qrc  vcpkg-configuration.json  vcpkg.json
src/: QuantMainDlg.cpp  QuantMainDlg.h  QuantMainDlg.ui  main.cpp
src/infra/: AppSettings.cpp  AppSettings.h  AsyncWorker.cpp  AsyncWorker.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  QuoteFetcher.cpp  QuoteFetcher.h  main.cpp
src/ui/: BacktestWidget.cpp  BacktestWidget.h  ChartContextMenu.h  MonteCarloWidget.cpp  MonteCarloWidget.h  OptionChainWidget.cpp  OptionChainWidget.h  PricerWidget.cpp  PricerWidget.h  QuantMainDlg.cpp  QuantMainDlg.h  SettingsWidge.cpp  SettingsWidget.cpp  SettingsWidget.h  VolSurfaceWidget.cpp  VolSurfaceWidget.h  WatchlistWidget.cpp  WatchlistWidget.h  YieldCurveWidget.cpp  YieldCurveWidget.h
